# auro-classic

./: .gitignore  AGENTS.md  HARDWARE_MAP.md  MEMORY.md  README.md
cad/: wheel-fixed-bore.3mf
cad/assembly2/extracted/3D/: 3dmodel.model
cad/assembly2/extracted/3D/_rels/: 3dmodel.model.rels
cad/assembly2/extracted/Metadata/: model_settings.config  project_settings.config
cad/extracted/frame/: [Content_Types].xml
cad/extracted/frame/3D/: 3dmodel.model
cad/extracted/wheel/3D/: 3dmodel.model
cad/extracted/wheel/_rels/: .rels
docs/: PHASE1_STATUS.md
firmware_mpy/: config.json  main.py
firmware_mpy/lib/: hw.py
firmware_sdk/: CMakeLists.txt  README.md
firmware_sdk/docs/: pio_quadrature_plan.md
firmware_sdk/src/: main.c
prompts/: claude_opus_phase1.md  codex_cli_phase1.md
protocol/: ndjson_v1.md
skills/airborne-gate-validation/: SKILL.md
skills/airborne-gate-validation/agents/: openai.yaml
skills/airborne-gate-validation/references/: gate-checklist.md
skills/airborne-gate-validation/scripts/: serial_capture.py
skills/pico-sdk-build-flash/: SKILL.md
skills/pico-sdk-build-flash/agents/: openai.yaml
skills/pico-sdk-build-flash/references/: build-paths.md
skills/pico-sdk-build-flash/scripts/: build_sdk.sh  flash_uf2.sh
tools/: extract_3mf_bbox.py  mpy_sync.sh
